delete unused imports and update the deprecated method newInstance() on reflection api to getDeclaredMathod().newInstance()